--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>{{ site.name }}</title>
+	<title>{% if title %}{{ title }} | {% endif %}{{ site.name }}</title>
 
 	{%- set css -%}
 		{% include "style/global.css" %}
