--- a/src/index.njk
+++ b/src/index.njk
@@ -11,7 +11,7 @@ layout: layouts/base.njk
 			class="[ stack-sm ][ container center ][]"
 		>
 			<h1 class="[][ bold font-2 line-1 ][ site-name ]">{{ site.name }}</h1>
-			<p class="[][ font-sm ][ site-description ]">{{ site.richDescription | safe }}</p>
+			<p class="[][ font-sm ][ site-description ]">{{ site.description | safe }}</p>
 		</div>
 	</div>
 
