Switch post metadata to dark gray

--- a/src/_includes/components/post-metadata.njk
+++ b/src/_includes/components/post-metadata.njk
@@ -1,4 +1,4 @@
-<p class="[][ color-gray font-sm uppercase ][]">
+<p class="[][ color-gray-dark font-sm uppercase ][]">
 	{% if post.isPublished %}
 		{% date post.date %}
 	{% else %}
