Improve page spacing at narrow widths

--- a/src/_includes/style/blocks.css
+++ b/src/_includes/style/blocks.css
@@ -40,8 +40,13 @@ body {
 }
 
 .page-container {
-	--padding-block: var( --s3 );
+	--padding-block: var( --s1 );
 }
+	@media screen and (min-width: 32rem) {
+		.page-container {
+			--padding-block: var( --s3 );
+		}
+	}
 
 .site-description {
 	opacity: 0.75;
