Update gray color definitions

--- a/src/_includes/style/global.css
+++ b/src/_includes/style/global.css
@@ -14,9 +14,9 @@
 
 	--color-black: #111;
 	--color-white: #fffffa;
-	--color-gray-light: #e0e0ea;
-	--color-gray: #959595;
-	--color-gray-dark: #555;
+	--color-gray-light: #e2e8f0;
+	--color-gray: #718096;
+	--color-gray-dark: #4a5568;
 
 	--font-sans: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 	--font-serif: Georgia, serif;
