--- a/src/_includes/style/global.css
+++ b/src/_includes/style/global.css
@@ -18,6 +18,7 @@
 	--color-gray: #718096;
 	--color-gray-dark: #4a5568;
 
+	--font-mono: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Menlo, Monaco, "Courier New", Courier, monospace;
 	--font-sans: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 	--font-serif: Georgia, serif;
 }
@@ -34,6 +35,10 @@ body, h1, h2, p {
 	margin: 0;
 	font-size: unset;
 	font-weight: unset;
+}
+
+code {
+	font-family: var( --font-mono );
 }
 
 ul {
