--- a/src/_includes/style/blocks.css
+++ b/src/_includes/style/blocks.css
@@ -159,12 +159,15 @@ body {
 	}
 
 .page-contents p code {
+	border-radius: var( --s-4 );
+	padding: var( --s-4 ) var( --s-3 );
 	background-color: var( --color-gray-light );
 	color: var( --color-black );
 }
 
 .page-contents pre code {
 	display: block;
+	border-radius: var( --s-4 );
 	padding: var( --s0 );
 	background-color: var( --color-black );
 	color: var( --color-white );
