--- a/src/_includes/style/global.css
+++ b/src/_includes/style/global.css
@@ -1,5 +1,7 @@
 :root {
 	--s-ratio: 1.5;
+	--s-4: calc( var( --s-3 ) / var( --s-ratio ) );
+	--s-3: calc( var( --s-2 ) / var( --s-ratio ) );
 	--s-2: calc( var( --s-1 ) / var( --s-ratio ) );
 	--s-1: calc( var( --s0 ) / var( --s-ratio ) );
 	--s0: 1rem;
@@ -13,7 +15,7 @@
 	--measure: var( --measure-default );
 
 	--color-black: #111;
-	--color-white: #fffffa;
+	--color-white: #f7fafc;
 	--color-gray-light: #e2e8f0;
 	--color-gray: #718096;
 	--color-gray-dark: #4a5568;
