Implement footer theming

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -69,7 +69,7 @@
 		<div
 			class="[ container center font-sm ][][]"
 		>
-			<p class="color-gray-light">{{ site.name }}</p>
+			<p>{{ site.name }}</p>
 		</div>
 	</footer>
 </body>
