--- a/src/_includes/style/blocks.css
+++ b/src/_includes/style/blocks.css
@@ -133,7 +133,8 @@ body {
 	font-weight: bold;
 }
 	.page-contents * + h2,
-	.page-contents * + h3 {
+	.page-contents * + h3,
+	.page-contents * + h4 {
 		margin-top: var( --s2 );
 	}
 	
@@ -158,7 +159,8 @@ body {
 }
 
 .page-contents ol,
-.page-contents ul
+.page-contents ul,
+.page-contents blockquote,
 {
 	padding-left: var( --s0 );
 }
