Improve clarity of HTML

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -51,9 +51,8 @@
 			class="[ container center font-sm uppercase ][][]"
 		>
 			<ul class="[][][ nav-items ]">
-				<li>
 				{% set svg %}../../icons/{{ theme.icon.filename }}{% endset %}
-				<a class="[][ no-underline ][ nav-icon ]" href="/">{% include svg %}</a></li>
+				<li><a class="[][ no-underline ][ nav-icon ]" href="/">{% include svg %}</a></li>
 				{% for navItem in collections.pages %}
 				<li><a href="{{ navItem.url }}" class="{{ 'active' if navItem.url == page.url }}">{{ navItem.data.title }}</a></li>
 				{% endfor %}
