--- a/src/post.njk
+++ b/src/post.njk
@@ -34,6 +34,13 @@ permalink: "/{{ post.permalink }}/index.html"
 
         <article class="[ stack ][ color-gray-dark ][ page-contents ]">
             {{ post.html | safe }}
+
         </article>
+
+        {% if env.PORTWAY_SHOW_TOOLS == "true" %}
+        <div class="[][ border-top padding-top-0 font-sm ][ portway-tools ]">
+            <a href="{{ post.documentUrl }}">Edit this post on Portway</a>
+        </div>
+        {% endif %}
     </div>
 </main>
