Use theme property for body text

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -37,6 +37,7 @@
 		:root {
 			--theme-color-headerBackground: {{ theme.header.background }};
 			--theme-color-headerText: {{ theme.header.text }};
+			--theme-color-bodyText: var( --color-gray-dark );
 			--theme-color-footerBackground: {{ theme.footer.background }};
 			--theme-color-footerText: {{ theme.footer.text }};
 			--theme-color-icon: var( --theme-color-headerText );
