--- a/src/_includes/style/global.css
+++ b/src/_includes/style/global.css
@@ -16,6 +16,7 @@
 
 	--color-black: #111;
 	--color-white: #f7fafc;
+	--color-gray-lightest: #edf2f7;
 	--color-gray-light: #e2e8f0;
 	--color-gray: #718096;
 	--color-gray-dark: #4a5568;
