Add feed link to page template

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -25,6 +25,8 @@
 	<meta property="twitter:description" content="{{ pageDescription }}">
 	<meta property="twitter:image" content="{{ socialImage }}">
 
+	<link rel="alternate" type="application/atom+xml" href="/feed.xml">
+
 	{%- set css -%}
 		{% include "style/global.css" %}
 		{% include "style/composition.css" %}
