Add placeholder contents to index page
- Missing environment variables
- No posts found

--- a/src/_includes/style/utilities.css
+++ b/src/_includes/style/utilities.css
@@ -4,6 +4,9 @@
 .bg-gray-light {
 	background-color: var( --color-gray-light );
 }
+.bg-gray-lightest {
+	background-color: var( --color-gray-lightest );
+}
 
 .block {
 	display: block;
