--- a/src/index.njk
+++ b/src/index.njk
@@ -18,10 +18,24 @@ layout: layouts/base.njk
 	<div
 		class="[ stack-lg ][ container center ][ page-container ]"
 	>
+		{% if posts.length > 0 %}
 		<div class="[][ grid ][ posts ]">
 		{% for post in posts -%}
 			{% include "components/post-card.njk" %}
 		{% endfor -%}
 		</div>
+		{% else %}
+		<div
+			class="[ stack container ][ center ][ page-container page-contents ]"
+		>
+			<div class="[ stack measure ][ center bg-gray-lightest padding-1 ][]">
+				{% if env.PORTWAY_KEY == undefined or env.PORTWAY_PROJECT_ID == undefined %}
+				<p><strong>Howdy!</strong> <span role="img" aria-label="waving">👋</span> This site appears to be missing one or more required environment variables. See <a href="https://eleventy-portway-starter.netlify.app/2021/02/getting-started/">Getting Started</a> for details on configuring your site to communicate with Portway.</p>
+				{% else %}
+				<p><strong>Hello!</strong> <span role="img" aria-label="waving">👋</span> It looks like this site is configured properly, but doesn’t have any blog posts to display just yet.</p>
+				{% endif %}
+			</div>
+		</div>
+		{% endif %}
 	</div>
 </main>
