--- a/src/index.njk
+++ b/src/index.njk
@@ -10,8 +10,8 @@ layout: layouts/base.njk
 		<div
 			class="[ stack-sm ][ container center ][]"
 		>
-			<h1 class="[][ bold font-2 line-1 ][ site-name ]">{{ site.name }}</h1>
-			<p class="[][ font-sm opacity-75 ][]">{{ site.description | safe }}</p>
+			<h1 class="[][ bold font-2 line-1 ][ site-name ]">{{ blog.name }}</h1>
+			<p class="[][ font-sm opacity-75 ][]">{{ blog.description }}</p>
 		</div>
 	</div>
 
