--- a/src/feed.njk
+++ b/src/feed.njk
@@ -4,8 +4,8 @@ eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
-  <title>{{ site.name }}</title>
-  <subtitle>{{ site.description | striptags }}</subtitle>
+  <title>{{ blog.name }}</title>
+  <subtitle>{{ blog.description }}</subtitle>
   <link href="{{ site.url }}{{ permalink }}" rel="self"/>
   <link href="{{ site.url }}"/>
   <updated>{{ collections.posts | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
