--- a/src/index.njk
+++ b/src/index.njk
@@ -28,7 +28,7 @@ layout: layouts/base.njk
 		<div
 			class="[ stack container ][ center ][ page-container page-contents ]"
 		>
-			<div class="[ stack measure ][ center bg-gray-lightest padding-1 ][]">
+			<div class="[ stack measure ][ center bg-gray-lightest padding-1 rounded ][]">
 				{% if env.PORTWAY_KEY == undefined or env.PORTWAY_PROJECT_ID == undefined %}
 				<p><strong>Howdy!</strong> <span role="img" aria-label="waving">👋</span> This site appears to be missing one or more required environment variables. See <a href="https://eleventy-portway-starter.netlify.app/2021/02/getting-started/">Getting Started</a> for details on configuring your site to communicate with Portway.</p>
 				{% else %}
