--- a/src/_includes/style/blocks.css
+++ b/src/_includes/style/blocks.css
@@ -157,6 +157,8 @@ body {
 }
 
 .page-contents h2 {
+	border-bottom: solid 1px var( --color-gray-light);
+	padding-bottom: var( --s0);
 	font-family: var( --font-sans );
 	font-size: var( --s1 );
 	font-weight: bold;
@@ -166,12 +168,10 @@ body {
 	.page-contents * + h4 {
 		margin-top: var( --s2 );
 	}
-	
+
 .page-contents h3 {
 	font-family: var( --font-sans );
-	font-size: var( --s0 );
 	font-weight: bold;
-	text-transform: uppercase;
 }
 
 .page-contents hr {
