--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -56,7 +56,7 @@
 			<ul class="[][][ nav-items ]">
 				{% set svg %}../../icons/{{ theme.icon.filename }}{% endset %}
 				<li><a class="[][ no-underline ][ nav-icon ]" href="/">{% include svg %}</a></li>
-				{% for navItem in collections.pages %}
+				{% for navItem in (collections.pages | sortPages) %}
 				{% if navItem.data.navigation != false %}
 				<li><a href="{{ navItem.url }}" class="{{ 'active' if navItem.url == page.url }}">{{ navItem.data.title }}</a></li>
 				{% endif %}
