--- a/src/_includes/style/blocks.css
+++ b/src/_includes/style/blocks.css
@@ -13,9 +13,20 @@ body {
 		text-decoration: underline;
 	}
 
-.nav-items > * + * {
-	margin-left: var( --s0 );
+.site-nav {
+	--padding-block: var( --s2 );
+	grid-template-columns: 1fr 1fr;
 }
+	.site-nav > *:nth-child(2) {
+		justify-self: end;
+	}
+
+.nav-items {
+	margin: 0;
+}
+	.nav-items > * + * {
+		margin-left: var( --s0 );
+	}
 	.nav-items a.active {
 		text-decoration: underline;
 	}
