--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -22,7 +22,7 @@ layout: layouts/base.njk
 			
 			{% if env.PORTWAY_SHOW_EDIT_LINK == "true" %}
 			<div class="[][ border-top padding-top-0 font-sm ][ portway-tools ]">
-				<a href="{{ page.documentUrl }}">Edit this post in Portway</a>
+				<a href="{{ page.documentUrl }}">Edit this page in Portway</a>
 			</div>
 			{% endif %}
 		</div>
