Don't show edit link on Archive page

--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -19,8 +19,8 @@ layout: layouts/base.njk
 	>
 		<div class="[ stack measure ][ center ][]">
 			{{ content | safe }}
-			
-			{% if env.PORTWAY_SHOW_EDIT_LINK == "true" %}
+
+			{% if env.PORTWAY_SHOW_EDIT_LINK == "true" and editLink !== false %}
 			<div class="[][ border-top padding-top-0 font-sm ][ portway-tools ]">
 				<a href="{{ page.documentUrl }}">Edit this page in Portway</a>
 			</div>
