--- a/src/archive.njk
+++ b/src/archive.njk
@@ -1,6 +1,7 @@
 ---
 title: Archive of Posts
 layout: layouts/page.njk
+editLink: false
 ---
 {%- set sortedPosts = (posts | sortPosts("date")) %}
 {%- set previousYear = 0 %}
