--- a/src/page.njk
+++ b/src/page.njk
@@ -2,7 +2,7 @@
 layout: layouts/page.njk
 tags: pages
 pagination:
-    data: pages
+    data: documents.pages
     size: 1
     alias: page
     addAllPagesToCollections: true
