--- a/src/post.njk
+++ b/src/post.njk
@@ -2,7 +2,7 @@
 layout: layouts/base.njk
 tags: posts
 pagination:
-    data: posts
+    data: documents.posts
     size: 1
     alias: post
     addAllPagesToCollections: true
