Fix page social image

--- a/src/page.njk
+++ b/src/page.njk
@@ -10,7 +10,7 @@ eleventyComputed:
     title: "{{ page.name }}"
     description: "{{ page.description }}"
     navigation: "{{ page.data.navigation }}"
-    socialImage: "{{ post.image.src }}"
+    socialImage: "{{ page.image.src }}"
     sort: "{{ page.data.sort }}"
 permalink: "/{{ page.permalink }}/index.html"
 ---
