--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -74,9 +74,8 @@
 		>
 			<section class="[ stack-sm ][][]">
 				<h2 class="[][ bold ][]">{{ blog.name }}</h2>
-				{% if blog.description -%}
-				<p class="[][ opacity-75 ][]">{{ blog.description }}</p>
-				{% endif %}
+				<p class="[][ opacity-75 ][]"><a href="/archive">Archive</a></p>
+				<p class="[][ opacity-75 ][]"><a href="/feed.xml">RSS Feed</a></p>
 			</section>
 
 			{% if links.length > 0 %}
